syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.aggregator.api;

option java_outer_classname = "HourApi";

service Hour {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.Hour"
      entity_type: "hour"
      state: "io.aggregator.entity.HourState"
      events: [
        "io.aggregator.entity.HourActivated",
        "io.aggregator.entity.MinuteAdded",
        "io.aggregator.entity.HourAggregationRequested",
        "io.aggregator.entity.HourAggregated",
        "io.aggregator.entity.ActiveMinuteAggregated"  //
      ]
    }
  };

  rpc AddMinute(AddMinuteCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/hour/add-minute"
      body: "*"
    };
  }

  rpc AggregateHour(AggregateHourCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/hour/aggregate-hour"
      body: "*"
    };
  }

  rpc MinuteAggregation(MinuteAggregationCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/hour/minute-aggregation"
      body: "*"
    };
  }
}

message AddMinuteCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  int64 epoch_hour = 5 [(kalix.field).entity_key = true];
  int64 epoch_minute = 6;
}

message AggregateHourCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  int64 epoch_hour = 5 [(kalix.field).entity_key = true];
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message MinuteAggregationCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  int64 epoch_hour = 5 [(kalix.field).entity_key = true];
  int64 epoch_minute = 6;
  double transaction_total_amount = 7;
  int32 transaction_count = 8;
  google.protobuf.Timestamp last_update_timestamp = 9;
  google.protobuf.Timestamp aggregate_request_timestamp = 10;
  string payment_id = 11;
}
